fix: tap to zoom on ios

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -67,7 +67,7 @@ input::-webkit-inner-spin-button {
 a, button, [role=button], [role=option] {
   cursor: pointer;
   user-select: none;
-  touch-action: none;
+  touch-action: manipulation;
   outline: none;
   border-radius: $length4;
   transition: all 200ms ease-out;
